--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@
 #server port
 server.port=3333
 
-#spring.application.name=crunche
+# log
+logging.file.name=./log/patika.log
+# OFF > FATAL > ERROR > WARN > INFO >DEBUG > TRACE
+logging.level.root=INFO
